fix: 修改错别字

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>三金happy birthday!!!</title>
+  <title>小雪happy birthday!!!</title>
 
   <link rel="stylesheet" href="./css/reset.css">
 
