--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
   </p>
   <p id="benediction2">
   </p>
-  
+  <p id="benediction3">
+  </p>
 </div>
 <div style="text-align:center;clear:both">
 </div>
